--- a/src/app/products/cart/cart.component.html
+++ b/src/app/products/cart/cart.component.html
@@ -1,20 +1,20 @@
-<ul class="outerShell" *ngIf="productsInCartArray.length > 0">
+<ul class="outer-shell" *ngIf="productsInCartArray.length > 0">
   <div class="checkout" *ngIf="cartTotal !== 0">
     <p>Tuotteiden kokonaissumma: {{cartTotal | currency: ' '}}€</p>
     <p>Toimitus: {{4.99 | currency: ' '}}€</p>
     <p>Tilauksen kokonaissumma: {{cartTotal + 4.99 | currency: ' '}}€</p>
     <button (click)="onPlaceAnOrder()" mat-raised-button color="accent">JATKA KASSALLE</button>
   </div>
-  <div class="innerShell" *ngFor="let item of productsInCartArray">
+  <div class="inner-shell" *ngFor="let item of productsInCartArray">
     <div>
-      <div>
+      <div class="product-data pic">
         <a routerLink="/product/{{item._id}}">
           <img
           src="https://via.placeholder.com/180"
           alt="Kuva tuotteesta">
         </a>
       </div>
-      <div>
+      <div class="product-data info">
         <h2>{{item.brand}}</h2>
         <h4>{{item.name}}</h4>
         <span style="margin: auto 8px auto 0;">Väri: {{item.colours[0] | uppercase}}</span>
@@ -22,11 +22,12 @@
         <span>Koko: {{item.sizes}}</span>
         <br>
         <input (change)="onChangeProductQuantity($event, item)" name="quantity" [value]=item.quantity [max]=item.maxQuantity [min]="1" type="number" requried>
+        <br>
+        <br>
+        <button (click)="onDeleteFromCart(item)" color="warn" mat-raised-button>POISTA TUOTE</button>
       </div>
       <br>
-      <button (click)="onDeleteFromCart(item)" color="warn" mat-raised-button>POISTA TUOTE</button>
     </div>
-    <hr>
   </div>
 </ul>
 <div *ngIf="productsInCartArray.length === 0">
